format and code praxis-b; add screenshots from B

--- a/app/assets/stylesheets/teibp.css
+++ b/app/assets/stylesheets/teibp.css
@@ -1524,13 +1524,13 @@ symbol {
   /* Empty Set Rule */
 }
 /* t */
-TEI {
+/*TEI {
   display: block;
 }
 table {
   border-collapse: separate;
   border-spacing: 2px;
-}
+}*/
 /* Why is this selector "TEI table" instead of just "table"? */
 TEI table {
   display: block;
