--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <div>
 
       <ul>
-        <li class="title"><%= link_to "Huon d'Auvergne: A Digital Edition", root_path(), class: "nav" %></li>
+        <li class="title"><%= link_to "Huon d'Auvergne Digital Archive", root_path(), class: "nav" %></li>
         <li><%= link_to 'Bibliography', bibliography_path(), class: "nav" %></a></li>
         <li class="dropdown">
           <a class="nav" href="javascript:void(0)" class="dropbtn">Editions</a>
