--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -493,6 +493,60 @@ img#marucelliana_logo {
 	color:#cccccc !important;
 }
 
+/* Praxis Pages */
+
+div.praxis {
+	margin-top: 4em;
+    margin-left: 7em;
+    margin-right: 7em;
+}
+
+div.table {
+    margin-left: 4em;
+}
+
+h1.praxis {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #5f0000;
+    font-weight: 600;
+    line-height: 1.3;
+    margin-bottom: 1em;
+}
+
+h2.praxis {
+    color: #5f0000;
+    margin-top: 1.3em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h3.praxis {
+	color: #5f0000;
+	margin-left: 2.25em;
+}
+
+h4.praxis {
+	color: #5f0000;
+}
+
+li.praxis {
+	margin-left: 4em;
+	float: left;
+}
+
+ol.praxis {
+	margin-top: 0em;
+	float: left;
+}
+
+p.subsection {
+	margin-left: 3em;
+}
+
+td {
+    padding-bottom: 1.5em;
+    padding-left: 1.5em;
+}
+
 /* TEI */
 
 TEI {
@@ -616,13 +670,13 @@ font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', G
 	text-align:left;
 }
 
-table {
+/*table {
 	border:none;
 }
 
 table, tr, th {
 	padding:none;
-}
+}*/
 
 #tei-hr {
 	width:40%;
@@ -638,11 +692,11 @@ table, tr, th {
 	width: 69%;
 }
 
-td {
+/*td {
 	padding-left:0;
 	padding-right: 0;
 	display: hidden;
-}
+}*/
 
 #bibPanel{
 	display: none;
@@ -755,11 +809,11 @@ header {
 	width: 69%;
 }
 
-td {
+/*td {
 	padding-left:0;
 	padding-right: 0;
 	display: hidden;
-}
+}*/
 
 #bibPanel {
 	display: none;
