--- a/app/assets/stylesheets/normalize.css
+++ b/app/assets/stylesheets/normalize.css
@@ -132,10 +132,10 @@ dfn {
  * contexts in Firefox 4+, Safari, and Chrome.
  */
 
-h1 {
+/*h1 {
   font-size: 2em;
   margin: 0.67em 0;
-}
+}*/
 
 /**
  * Address styling not present in IE 8/9.
@@ -410,7 +410,7 @@ optgroup {
  * Remove most spacing between table cells.
  */
 
-table {
+/*table {
   border-collapse: collapse;
   border-spacing: 0;
 }
@@ -418,4 +418,4 @@ table {
 td,
 th {
   padding: 0;
-}
+}*/
