comment out hell comparison section

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,7 @@
             <a class="nav" href="#"><%= link_to 'Padua (P)', p_manuscript_path() %></a>
             <a class="nav" href="#"><%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></a>
             <a class="nav" href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
-            <a class="nav" href="#"><%= link_to 'Hell Scene Comparison', hell_scene_path() %></a>
+            <!-- <a class="nav" href="#"><%= link_to 'Hell Scene Comparison', hell_scene_path() %></a> -->
           </div>
         </li>
         <li class="dropdown">
