--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,6 @@
 <div>
 
-      <ul>
+      <ul class="nav">
         <li class="title"><%= link_to "Huon d'Auvergne Digital Archive", root_path(), class: "nav" %></li>
         <li><%= link_to 'Bibliography', bibliography_path(), class: "nav" %></a></li>
         <li class="dropdown">
