--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -67,7 +67,7 @@
                 <a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Washington and Lee University)<br>
                 <a href="http://library.wlu.edu/about/library-directory/jason-mickel">Jason Mickel</a> (Washington and Lee University)<br>
                 <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Washington and Lee University)<br>
-                <a href="http://scholarslab.org/people/brandon-walsh/>Brandon Walsh"</a> (Scholars' Lab, University of Virginia)<br>
+                Brandon Walsh<a href="http://scholarslab.org/people/brandon-walsh/>Brandon Walsh"</a> (Scholars' Lab, University of Virginia)<br>
                 <a href="">Abdurrafey Khan</a> (Loyola University Chicago)
               </div>
 
