fix validation errors in edition files and update schema

--- a/app/views/pages/b_praxis.html.erb
+++ b/app/views/pages/b_praxis.html.erb
@@ -21,11 +21,11 @@
 
         <p>Berlin uses both a wide variety and frequent abbreviations, in comparison with, for example, the Roland V4 (Beretta xxiii-xxvii) or Aliscans (Holtus xxiii-xxiv). The frequency may be partially due to a difference in text length, but is also in general usage, with the result that the number of abbreviations in B's version of Huon is very large.</p>
 
-		<p>We follow the most frequent fully-expanded form found in the text where possible; where there is none (e.g. parjurer and its forms) we follow either the rhyme, if the word in question is in rhyme position; or the authoritative dictionary in the field if not it is not (Tobler-Lommatzsch [TL] for Old French; the Tesoro della lingua italiana delle origini [TLIO] for Italian or Dizionario etimologico italiano [DELI], where the example is before or contemporary with our text, 1341; the Glossarium mediae et infimae latinitatis [DuCange] for Latin). The asterisk (*) stands for "in rhyme position." There are a total of 12,317 expanded abbreviations in the text, and ten hiatuses where text is missing.</p>
+    		<p>We follow the most frequent fully-expanded form found in the text where possible; where there is none (e.g. parjurer and its forms) we follow either the rhyme, if the word in question is in rhyme position; or the authoritative dictionary in the field if not it is not (Tobler-Lommatzsch [TL] for Old French; the Tesoro della lingua italiana delle origini [TLIO] for Italian or Dizionario etimologico italiano [DELI], where the example is before or contemporary with our text, 1341; the Glossarium mediae et infimae latinitatis [DuCange] for Latin). The asterisk (*) stands for "in rhyme position." There are a total of 12,317 expanded abbreviations in the text, and ten hiatuses where text is missing.</p>
 
-		<p>Wherever the abbreviation creates a double letter, the abbreviation is written first.</p>
+    		<p>Wherever the abbreviation creates a double letter, the abbreviation is written first.</p>
 
-		<p>We give examples of appearances of  the resolution with the line number of its appearance, and where there is a possible issue, we give the full form for comparison. Italics in the edition itself are used for the expansions of abbreviations; here, italics with square brackets [ ] represent the expanded word from the text with the expansion in the brackets. For the MS form, we attempt to reproduce typographically the actual appearance where possible, and otherwise provide a copy of an actual appearance from the MS. Since the transcription is available to all, we do not give specific line numbers unless necessary.</p>
+    		<p>We give examples of appearances of  the resolution with the line number of its appearance, and where there is a possible issue, we give the full form for comparison. Italics in the edition itself are used for the expansions of abbreviations; here, italics with square brackets [ ] represent the expanded word from the text with the expansion in the brackets. For the MS form, we attempt to reproduce typographically the actual appearance where possible, and otherwise provide a copy of an actual appearance from the MS. Since the transcription is available to all, we do not give specific line numbers unless necessary.</p>
 
         <div class="table">
         <h4 class="praxis">Apostrophe:</h4>
@@ -223,14 +223,17 @@
               </tr>
               </table>
 
-              <h4 class="praxis">p with a slash, longer on the left (cf. Aliscans, V4)(v. 661) <%= image_tag("b-pslash-abbr.png", alt: "b-pslash-abbr") %></h4>
+              <h4 class="praxis">p with a slash, longer on the left (cf. Aliscans, V4) <%= image_tag("b-pslash-abbr.png", alt: "b-pslash-abbr") %> (v. 661)</h4>
               <tr>
-                  <td></td>
-                  <td></td>
+                  <td>[ro]</td>
+                  <td><em>p[ro]don/[n]</em> (<em>prodom</em>, 8 appearances; <em>prodom/e</em>, 12 appearances; <em>prodon</em>, 21 appearances); <em>p[ro]met</em>, etc. (cf. <em>promis</em>, <em>prometoit</em>, etc.); <em>p[or]veüs</em> (TL <em>porvëoir</em>): only 8 forms in the entire MS. Note that "<em>p[ar]fon</em>" forms are clearly –<em>ar</em>- because of the abbreviation form (12 appearances), in the absence of any fully expanded forms.
+              </td>
+
+              <h4 class="praxis">ṗ (p with a short line over it); this form alternates with p with double dot (see above) <%= image_tag("b-pline-abbr.png", alt: "b-pslash-abbr") %> (v. 9976) <%= image_tag("b-pline2-abbr.png", alt: "b-pslash-abbr") %> (v. 9983)</h4>
               </tr>
               <tr>
-                  <td></td>
-                  <td></td>
+                  <td>[re]</td>
+                  <td><em>prendre</em> and its forms with prefixes: <em>ap[re]ndre</em>; <em>emp[re]ndre</em>; <em>mesp[re]ndoit</em>; <em>porp[re]nent</em>; <em>po[r]p[re]ndro[n]s</em>; <em>p[re]nant</em>; <em>rep[re]nt</em>, <em>sorp[re]ndre</em> (TL <em>prendre</em>; DELI <em>prendere</em>); <em>ap[re]sente</em> (present, 20 appearances); <em>ap[re]ste</em> and forms (cf. <em>apreste</em>/<em>té</em>/<em>teç</em>, 5 forms); asp[re]ment (cf. aspre v. 10073, Aspremo[n]t v. 10094); p[re]cios (TL precïos; DELI prezioso); p[re]dica[n]se (TL predicance; DELI predicazione); p[re]ga and its forms (DELI pregare); p[re]se/ssant, p[re]senter and its forms (TL present, presenter; DELI presente, presentare); p[re]sie (TL presse; DELI pressa, Dante); p[re]ste (prest/eés 12 appearances as noun); p[re]voir/e, p[re]vonde* (prevoir 3 appearances);  rep[re]sion (TL represser; DELI repressione/reprimere); rep[re]sent (TL representer); semp[re] (TL sempre(s); DELI sempre)</td>
               </tr>
               <tr>
                   <td></td>
