--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,12 @@
+<!-- <div class="footer">
+	
+	<div class="footer-1"></div>
+	<div class="footer-2"></div>
+	<div class="footer-3"></div>
+
+
+</div> -->
+
 
 
 <div class="container">
