critical editions to digital editions on intro page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -17,7 +17,7 @@
   <div class="col-2"></div>
 
   <div class="col-10">
-          <h4 id="sub-header">Critical Editions</h4>
+          <h4 id="sub-header">Digital Editions</h4>
           <div id="manuscript_list_index">
             <%= link_to 'Berlin (B)', b_manuscript_path() %> |
             <%= link_to 'Turin (T)', t_manuscript_path() %> |
