SPM fix typos and errors pointed out by LZM

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -42,7 +42,7 @@
               <div class="participant_section">
                 <a href="http://www.loyola.edu/academic/modernlanguages/faculty/italian/morgan.aspx">Leslie Zarker Morgan</a>, Editor of Berlin and Turin (Loyola University Maryland)<br>
                 <a href="https://wlu.academia.edu/StephenPatrickMcCormick">Stephen P. McCormick</a>, Editor of Padua and the Barbieri fragment (Washington and Lee University)<br>
-                <a href="http://www.unf.edu/~sschwam/">Shira Schwam-Baird</a>, Translator of Berlin (University of North Florida)</div>
+                <a href="http://www.unf.edu/bio/N00009290">Shira Schwam-Baird</a>, Translator of Berlin (University of North Florida)</div>
 
             <h5 id="sub-header">Collaborating Scholars</h5>
 
