LZM rechecked lines 1-213 = through laisse 8 10 Sept 2017; SPM add items to B criteria section

--- a/app/views/pages/b_praxis.html.erb
+++ b/app/views/pages/b_praxis.html.erb
@@ -224,28 +224,61 @@
               </table>
 
               <h4 class="praxis">p with a slash, longer on the left (cf. Aliscans, V4) <%= image_tag("b-pslash-abbr.png", alt: "b-pslash-abbr") %> (v. 661)</h4>
+              <table>
               <tr>
                   <td>[ro]</td>
-                  <td><em>p[ro]don/[n]</em> (<em>prodom</em>, 8 appearances; <em>prodom/e</em>, 12 appearances; <em>prodon</em>, 21 appearances); <em>p[ro]met</em>, etc. (cf. <em>promis</em>, <em>prometoit</em>, etc.); <em>p[or]veüs</em> (TL <em>porvëoir</em>): only 8 forms in the entire MS. Note that "<em>p[ar]fon</em>" forms are clearly –<em>ar</em>- because of the abbreviation form (12 appearances), in the absence of any fully expanded forms.
-              </td>
+                  <td><em>p[ro]don/[n]</em> (<em>prodom</em>, 8 appearances; <em>prodom/e</em>, 12 appearances; <em>prodon</em>, 21 appearances); <em>p[ro]met</em>, etc. (cf. <em>promis</em>, <em>prometoit</em>, etc.); <em>p[or]veüs</em> (TL <em>porvëoir</em>): only 8 forms in the entire MS. Note that "<em>p[ar]fon</em>" forms are clearly –<em>ar</em>- because of the abbreviation form (12 appearances), in the absence of any fully expanded forms.</td>
+              </tr>
+              </table>
 
               <h4 class="praxis">ṗ (p with a short line over it); this form alternates with p with double dot (see above) <%= image_tag("b-pline-abbr.png", alt: "b-pslash-abbr") %> (v. 9976) <%= image_tag("b-pline2-abbr.png", alt: "b-pslash-abbr") %> (v. 9983)</h4>
-              </tr>
+              <table>
               <tr>
                   <td>[re]</td>
-                  <td><em>prendre</em> and its forms with prefixes: <em>ap[re]ndre</em>; <em>emp[re]ndre</em>; <em>mesp[re]ndoit</em>; <em>porp[re]nent</em>; <em>po[r]p[re]ndro[n]s</em>; <em>p[re]nant</em>; <em>rep[re]nt</em>, <em>sorp[re]ndre</em> (TL <em>prendre</em>; DELI <em>prendere</em>); <em>ap[re]sente</em> (present, 20 appearances); <em>ap[re]ste</em> and forms (cf. <em>apreste</em>/<em>té</em>/<em>teç</em>, 5 forms); asp[re]ment (cf. aspre v. 10073, Aspremo[n]t v. 10094); p[re]cios (TL precïos; DELI prezioso); p[re]dica[n]se (TL predicance; DELI predicazione); p[re]ga and its forms (DELI pregare); p[re]se/ssant, p[re]senter and its forms (TL present, presenter; DELI presente, presentare); p[re]sie (TL presse; DELI pressa, Dante); p[re]ste (prest/eés 12 appearances as noun); p[re]voir/e, p[re]vonde* (prevoir 3 appearances);  rep[re]sion (TL represser; DELI repressione/reprimere); rep[re]sent (TL representer); semp[re] (TL sempre(s); DELI sempre)</td>
+                  <td><em>prendre</em> and its forms with prefixes: <em>ap[re]ndre</em>; <em>emp[re]ndre</em>; <em>mesp[re]ndoit</em>; <em>porp[re]nent</em>; <em>po[r]p[re]ndro[n]s</em>; <em>p[re]nant</em>; <em>rep[re]nt</em>, <em>sorp[re]ndre</em> (TL <em>prendre</em>; DELI <em>prendere</em>); <em>ap[re]sente</em> (present, 20 appearances); <em>ap[re]ste</em> and forms (cf. <em>apreste</em>/<em>té</em>/<em>teç</em>, 5 forms); <em>asp[re]ment</em> (cf. <em>aspre</em> v. 10073, <em>Aspremo[n]t</em> v. 10094); <em>p[re]cios</em> (TL <em>precïos</em>; DELI <em>prezioso</em>); <em>p[re]dica[n]se</em> (TL <em>predicance</em>; DELI <em>predicazione</em>); <em>p[re]ga</em> and its forms (DELI <em>pregare</em>); <em>p[re]se/ssant</em>, <em>p[re]senter</em> and its forms (TL <em>present</em>, <em>presenter</em>; DELI <em>presente</em>, <em>presentare</em>); <em>p[re]sie</em> (TL <em>presse</em>; DELI <em>pressa</em>, Dante); <em>p[re]ste</em> (<em>prest/eés</em> 12 appearances as noun); <em>p[re]voir/e</em>, <em>p[re]vonde</em>* (<em>prevoir</em> 3 appearances); <em>rep[re]sion</em> (TL <em>represser</em>; DELI <em>repressione</em>/<em>reprimere</em>); <em>rep[re]sent</em> (TL <em>representer</em>); <em>semp[re]</em> (TL <em>sempre(s)</em>; DELI <em>sempre</em>)</td>
               </tr>
+              </table>
+
+              <h4 class="praxis">p' (p with an apostrophe over it) <%= image_tag("b-pst-abbr.png", alt: "b-pst-abbr") %>(v. 9894) <%= image_tag("b-pmer-abbr.png", alt: "b-pmer-abbr") %>(v. 9907). <br>
+              <h4 class="praxis">p with "i" over it, alternate</h4>
+              <table>
+              <tr>
+                  <td>[ri]</td>
+                  <td>past participle and perfect forms from prendre: <em>ap[ri]s</em>, <em>desp[ri]st</em>, <em>emp[ri]se</em> <em>entrep[ri]s</em>, <em>porp[ri]s</em>, <em>p[ri]st</em>, <em>pristrent</em>, <em>sorp[ri]st</em> (<em>prist</em> 50 appearances); <em>mesp[ri]son</em> (<em>mesprison</em> 8 appearances); <em>p[ri]ma</em> and its various derivatives, <em>p[ri]mer</em>, <em>p[ri]mera/in</em>, etc. (<em>prime/r</em> etc. 8 appearances); <em>p[ri]nce</em>, <em>p[ri]ncer</em> (TL <em>prince</em>, <em>princeps</em>; DELI <em>principe</em>); <em>p[ri]nceps</em> (<em>princeps</em> v. 12076); <em>p[ri]ser</em> and its forms: <em>prissa</em>, <em>p[ri]sse</em>* [=prix] (<em>prise</em> 2 appearances [< priser]; TL <em>prise</em>); <em>p[ri]son/s</em> (<em>prison/s</em> 10 appearances; some are nouns, some forms of <em>pris(i)er)</em>; <em>p[ri]vés</em> (<em>privé</em>* v. 376)</td>
+              </tr>
+              </table>
+
+              <h4 class="praxis">p abbreviation oddities</h4>
+                  <p>3633 <em>p[ri]son</em> (8 other appearances of <em>prison</em> in full and 6 other abbreviated forms, but here <em>p</em> with cross stroke on descender)</p>
+                  <p>4285 <em>p[er] voire</em> (<em>p</em> with both cross stroke and dot above)</p>
+                  <p>7275 <em>sorp[ra]gne</em> an unidentifiable abbreviation, seems to be two dots, above; so this should be <em>[re]</em> or <em>[ri]</em>, but rigorous sight rhyme imposes <em>–agne</em></p>
+                  <p><%= image_tag("b-sorpgne-abbr.png", alt: "b-sorpgne-abbr") %></p>
+                  <p>8624 p[ri]sse* but dot above, not an apostrophe (vowel dictated by rhyme)</p>
+                  <p>Where p with the abbreviation of a slash on the descender appears alone without other indications the resolution is decided as follows:</p>
+                  <ol class="praxis">
+                    <li class="praxis">if there are other expressions with the preposition, it follows the majority of those (e.g., par force (7 appearances) v. por force (2 appearances) ==> p[ar] force;</li>
+                    <li class="praxis">in parallel expressions, where one is the full form, the other follows: e.g., ᵱ mons [et] por vaus [et] ᵱ ces poi agu (v. 4985) ==> p[er] mons [et] por vaus [et] p[or] ces poi agu;</li>
+                    <li class="praxis">where there is an equal number of expressions, the resolution is p[or] since that is by far the most frequent (e.g., par vos, 8 appearances; por vos, 8 appearances, the 9 abbreviations are resolved p[or] vos).</li>
+                    <li class="praxis">where there are no similar expressions or other means to judge, the resolution is p[or] given its predominance.</li>
+                  </ol>
+
+
+              <h4 class="praxis"></h4>
+              <table>
               <tr>
                   <td></td>
                   <td></td>
               </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td></td>
-                  <td></td>
-              </tr>
+              </table>
         	</table>
         </div>
+
+
+
+
+
+
+
+
+
+
