SPM add B criteria intro, punctuation, caps, more of abbreviations, create abbr-example div element

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -499,6 +499,10 @@ img#marucelliana_logo {
 
 /* Praxis Pages */
 
+div.abbr-examples {
+	margin-left: 20%;
+}
+
 div.praxis {
 	margin-top: 4em;
     margin-left: 7em;
