--- a/app/views/pages/b_praxis.html.erb
+++ b/app/views/pages/b_praxis.html.erb
@@ -11,13 +11,37 @@
 <body>
 <div class="praxis">
 
-        <h1 class="praxis">Edition Criteria for Berlin</h1>
+        <h1 class="praxis">Criteria of Edition for Berlin</h1>
 
         <h2 class="praxis">&#10081; 1. Introduction</h2>
 
-        <p class="praxis"></p>
+        <p>For the Berlin Huon d'Auvergne, punctuation and citations are according to the general norms outlined in the overall document.</p>
+        <p>However, the Berlin Huon d'Auvergne is very close to Old French. For that reason we keep close to the most respected norms for Old French editions. There are situations in which Old French norms do not work with the Franco-Italian text, so these are made explicit in the following list.</p>
 
-        <h2 class="praxis">&#10081; 2. Abbreviations</h2>
+        <h2 class="praxis">&#10081; 2. Capitalization</h2>
+
+        <p>Capitalization is as in French: of nouns, not adjectives for origins; thus, <em>le g[ra]nt Françoi</em> (v. 9042), but <em>la françoise gient</em> (v. 11494). We capitalize names of places, names of people, but not titles unless part of a place name (e.g., <em>saint Laçaron</em>, v. 2232, but <em>Saint Pol</em>, v. 7953). Names of God and Mary are capitalized, as are the pronominalized attributes used for them (<em>Diex</em>; <em>Marie</em>; <em>Verge</em>; <em>Crucifis</em>; etc.), but not pronouns refering to them.</p>
+
+        <p>"v." designates a line number in order to  avoid confusion with the number one  that use of the English "l." could create (it looks too much like the number one), and "vv." stands for "lines."</p>
+
+        <h2 class="praxis">&#10081; 3. Punctuation in the MS</h2>
+
+        <p>Periods appear at the end of most lines as well as before and after some names, rather inconsistently (e.g., Uliens., v. 10093; rois .agollāt., v. 10092). Similarly, numbers, here always Roman numerals (not Arabic), appear relatively consistently with periods around them: <br>
+        <%= image_tag("b-vii-punct.png", alt: "b-vii-punct") %> (v. 10238).</p>
+
+        <p>In the initial folios, there is a slash between the two hemistichs of each line (v. 338):</p>
+
+        <%= image_tag("b-hemistich-punct.png", alt: "b-hemistich-punct.png") %>
+
+        <p>Consecutive usage of this slash stops at the end of 18Rb; 47Rb also contains lines with the divider as do occasional lines throughout the manuscript, with no evident plan (47Rb; 53Va; 62V- 63R; 72Ra; 73Vb; 84V).</p>
+
+        <p>There is usually a dot at the end of each line in the MS.</p>
+
+        <p>[...] represents missing text in the MS; there are incomplete lines and missing lines between completed lines.</p>
+
+        <p>< > are used for interpolations, either our additions, suggestions from other editors, or information gleaned from other sources. These are all annotated.</p>
+
+        <h2 class="praxis">&#10081; 4. Abbreviations</h2>
 
         <p>Berlin uses both a wide variety and frequent abbreviations, in comparison with, for example, the Roland V4 (Beretta xxiii-xxvii) or Aliscans (Holtus xxiii-xxiv). The frequency may be partially due to a difference in text length, but is also in general usage, with the result that the number of abbreviations in B's version of Huon is very large.</p>
 
@@ -149,8 +173,8 @@
               </tr>
               <tr>
                   <td>[m]</td>
-                  <td>before labials: e.g., <em>aco[m]plir</em>; <em>fla[m]be</em>, but not across word boundaries: e.g., <em>i[n] parolle</em>, though the MS itself does not follow that rule at times, e.g., <em>Em p[ar]durable</em> (v. 9790). Exception: <em>no[n]portant</em> (cf. v. 6082, where the <em>non</em> seems to be felt still in its complete form).<br/>
-                  <em>cu[m]</em>, <em>co[m]</em> for adverb or conjunction (MSI come, MSF comme); <em>cum</em> full form, 254 appearances; <em>com</em> full form, 75 appearances; cu[m] 220 appearances, co[m] 2 appearances.<br/>
+                  <td>before labials: e.g., <em>aco[m]plir</em>; <em>fla[m]be</em>, but not across word boundaries: e.g., <em>i[n] parolle</em>, though the MS itself does not follow that rule at times, e.g., <em>Em p[ar]durable</em> (v. 9790). Exception: <em>no[n]portant</em> (cf. v. 6082, where the <em>non</em> seems to be felt still in its complete form).<br>
+                  <em>cu[m]</em>, <em>co[m]</em> for adverb or conjunction (MSI come, MSF comme); <em>cum</em> full form, 254 appearances; <em>com</em> full form, 75 appearances; cu[m] 220 appearances, co[m] 2 appearances.<br>
                   This was a surprising situation: <em>con</em>, for the preposition "with," appears only 3 times. <em>Com</em> also functions as a preposition, so the 56 times <em>cū</em> functions as a preposition, it must be resolved <em>cu[m]</em>; <em>cō</em>, however, can be resolved as <em>co[n]</em> (one time, v. 5804).</td>
               </tr>
               <tr>
@@ -204,7 +228,7 @@
               <h4 class="praxis">ᵱ</h4>
               <table>
               <tr>
-                <td>The abbreviations of <b>p</b> are problematic due to the differences in development of French and Italian area dialects. Two abbreviations are very specific and not problematic, but the <b>p</b> with a cross-stroke over the descender can designate three possible resolutions. In that case, we separate longer words from the abbreviation alone. Most specific words or expressions can follow the most frequent appearances, but the prepositions <em>par</em>, <em>per</em>, <em>por</em> when alone pose a challenge. <em>par</em> appears 206 times; <em>per</em> 53, and <em>por</em> 733. However, they have different meanings, these are not just prepositions. <em>par</em> is also from the verb "to appear," and furthermore functions as an adverbial intensifier. <em>per</em> means "father" (42 times), "jewel" (2 times), "stone" (two times), "peer (of the realm)" (1 time), "equal" (twice) and "Peter" (once), and is the preposition only 11 times. Furthermore, the abbreviation of a letter (<em>i</em> or <em>r</em>) above the letter appears with <b>p</b>.<br/>
+                <td>The abbreviations of <b>p</b> are problematic due to the differences in development of French and Italian area dialects. Two abbreviations are very specific and not problematic, but the <b>p</b> with a cross-stroke over the descender can designate three possible resolutions. In that case, we separate longer words from the abbreviation alone. Most specific words or expressions can follow the most frequent appearances, but the prepositions <em>par</em>, <em>per</em>, <em>por</em> when alone pose a challenge. <em>par</em> appears 206 times; <em>per</em> 53, and <em>por</em> 733. However, they have different meanings, these are not just prepositions. <em>par</em> is also from the verb "to appear," and furthermore functions as an adverbial intensifier. <em>per</em> means "father" (42 times), "jewel" (2 times), "stone" (two times), "peer (of the realm)" (1 time), "equal" (twice) and "Peter" (once), and is the preposition only 11 times. Furthermore, the abbreviation of a letter (<em>i</em> or <em>r</em>) above the letter appears with <b>p</b>.<br>
                 --When an abbreviation with p appears within a lexical item, it follows the other words of the family where these exist; if not, the listed lemma of TL or DELI (as appropriate to the form).</td>
               </tr>
               </table>
@@ -256,14 +280,21 @@
                   <p>8624 p[ri]sse* but dot above, not an apostrophe (vowel dictated by rhyme)</p>
                   <p>Where p with the abbreviation of a slash on the descender appears alone without other indications the resolution is decided as follows:</p>
                   <ol class="praxis">
-                    <li class="praxis">if there are other expressions with the preposition, it follows the majority of those (e.g., par force (7 appearances) v. por force (2 appearances) ==> p[ar] force;</li>
-                    <li class="praxis">in parallel expressions, where one is the full form, the other follows: e.g., ᵱ mons [et] por vaus [et] ᵱ ces poi agu (v. 4985) ==> p[er] mons [et] por vaus [et] p[or] ces poi agu;</li>
-                    <li class="praxis">where there is an equal number of expressions, the resolution is p[or] since that is by far the most frequent (e.g., par vos, 8 appearances; por vos, 8 appearances, the 9 abbreviations are resolved p[or] vos).</li>
-                    <li class="praxis">where there are no similar expressions or other means to judge, the resolution is p[or] given its predominance.</li>
+                    <li class="praxis">if there are other expressions with the preposition, it follows the majority of those (e.g., <em>par force</em> (7 appearances) v. <em>por force</em> (2 appearances) ==> <em>p[ar] force</em>;</li>
+                    <li class="praxis">in parallel expressions, where one is the full form, the other follows: e.g., <em>ᵱ mons [et] por vaus [et] ᵱ ces poi agu</em> (v. 4985) ==> <em>p[er] mons [et] por vaus [et] p[or] ces poi agu</em>;</li>
+                    <li class="praxis">where there is an equal number of expressions, the resolution is <em>p[or]</em> since that is by far the most frequent (e.g., <em>par vos</em>, 8 appearances; <em>por vos</em>, 8 appearances, the 9 abbreviations are resolved <em>p[or] vos</em>).</li>
+                    <li class="praxis">where there are no similar expressions or other means to judge, the resolution is <em>p[or]</em> given its predominance.</li>
                   </ol>
 
+              <h4 class="praxis">գ</h4>
 
-              <h4 class="praxis"></h4>
+              <p>The abbreviations of <em>q</em> are also problematic. There are again three possible abbreviations: <em>q</em> with a letter (like an <em>i</em>) above; <em>q</em> with the titulus above; and <em>q</em> with a cross-stroke on the descender. <em>q</em> with a cross-stroke appears 28 times and resolved <em>q[ui]</em>, as demonstrated by other full forms in the text: <em>[con]q[ui]st</em>, <em>[con]q[ui]s</em>, <em>q[ui]e[r]t</em> (2 appearances), <em>sorq[ui]die</em>, <em>q[ui]er</em>, <em>q[ui]</em> (8 appearances), <em>plaq[ui]ment</em> (2 appearances), <em>req[ui]e[r]</em>, <em>delinq[ui]re</em>, <em>req[ui]s</em>, <em>q[ui]d</em>, <em>req[ui]rois</em>, <em>q[ui]er</em>, <em>[con]q[ui]sons</em>, <em>tranq[ui]limant</em>, <em>req[ui]e[r]</em>, <em>nasq[ui]</em>, <em>q[ui]sm req[ui]er</em>. References to TL or DELI or both clarify specific uses within words or expressions.</p>
+              <p>However, since the palatalization in the two language areas proceeded differently, <em>qu-</em> represents a variety of different phonemes and no standard existed at the time. Is it the same as <em>q-</em> alone? Thus in some cases we must decide how to establish use: within an individual lexical family? within a certain part of speech (e.g., demonstratives)? should we create a regularity when none existed at the time or in the text? For example, final <em>–que</em> alternates with <em>–qe</em>, <em>–c</em> and <em>–che</em>. I have chosen for now to standardize in <em>–qu-</em> in part because it makes reading easier, and follows modern French usage in spelling with <em>q-</em>. Then the question of the final vowel: <em>-e</em> or <em>–i</em>? Each has a specific meaning in the modern languages. In the original text, there are 89 forms <em>q</em> alone; 494 of <em>qe</em>; 137 of <em>qi</em>; 472 of <em>qu</em>; 1089 of <em>que</em>; 687 of <em>qui</em> (though there are also some questions of word division involved for conjunctions; more about this below). The more frequent form by far is therefore <em>que</em>, but that might be expected as being the object case (for which there are many more possibilities than the subject case: direct object, object of preposition, etc.) and an interrogative form. Because of the difficulty of metrics in a Franco-Italian text, I have not in general elided <em>u</em> before vowels, with the exceptions noted below.</p>
+
+              <div class="abbr-examples"><%= image_tag("b-qi-abbr.png", alt: "b-qi-abbr.png") %> (v. 21) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<%= image_tag("b-qst.abbr.png", alt: "b-qst.abbr.png") %> (v. 49) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<%= image_tag("b-qaua-abbr.png", alt: "b-qaua-abbr.png") %> (v. 363)</div>
+
+              <p>The second (<em>q</em> with a slash on the descender) appears 28 times and is always resolved <em>q[ui]</em>, as attested by other forms of the same words in complete form for the most part, with 8 of those <em>qui</em> alone. The first (<em>q</em> with <em>i</em> above the line) appears 17 times and is resolved in <em>q[ui]</em> when subject. <em>q[ui]</em> alone can represent relative pronouns as subject ("who"); demonstrative pronouns (since <em>qui</em> also stands for the palatalized Modern Italian <em>quelli</em>, MSF <em>ceux</em>); the interrogative for a person; and the proverbial pronoun "he/she who." Other abbreviated forms—relative pronoun direct object, the conjunction, an interrogative for a thing or fact—are resolved <em>q[ue]</em>. Where the <em>u</em> is already present and the q bears an abbreviation, the final vowel follows the same rule. This means that 523 <em>q</em> with a dot or similar designation above were expanded as <em>q[ue]</em> in addition to those surmounted by an <em>i</em>. In Old French itself usage was not regular; Ménard notes that dialectal usage varied and is expliquable.<!-- FN: Philippe Ménard, Manuel du français du moyen âge, 1. syntaxe de l'ancien français (Sobodi, 1973), ¶64, "Remarques," p. 80. --></p>
+
               <table>
               <tr>
                   <td></td>
@@ -272,13 +303,3 @@
               </table>
         	</table>
         </div>
-
-
-
-
-
-
-
-
-
-
